Orators & partners template done

--- a/orators.html
+++ b/orators.html
@@ -58,27 +58,22 @@
       <div class="orators-container">
 
         <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
         </div>
         <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
         </div>
         <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
-        </div>
-
-      </div>
-
-      <div class="orators-container">
-
-        <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
-        </div>
-        <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
-        </div>
-        <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
         </div>
 
       </div>
@@ -86,18 +81,63 @@
       <div class="orators-container">
 
         <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
         </div>
         <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
         </div>
         <div class="orator">
-          <a href="#"><img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';"/></a>
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
+        </div>
+
+      </div>
+
+      <div class="orators-container">
+
+        <div class="orator">
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
+        </div>
+        <div class="orator">
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
+        </div>
+        <div class="orator">
+          <a href="#">
+            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
+            <p class="orName">Nome Orador</p>
+          </a>
         </div>
 
       </div>
 
     </section>
+
+    <!-- <script type="text/javascript">
+      jQuery(document).ready(function($) {
+
+        $('.orPic').mouseleave(function() {
+          $('.orName').fadeOut();
+        });
+        $('.orPic').mouseenter(function() {
+          $('.orName').fadeIn();
+        });
+
+      });
+    </script> -->
 
 
   </main>
