News/Orators update

--- a/index.html
+++ b/index.html
@@ -57,13 +57,9 @@
     <section id="about">
       <div class="text aos-init aos-animate" data-aos="fade-zoom-in">
         <h3 class="fir" style="font-size:28px; color:#E62B1E; font-weight:bold">
-          TEDx<span style="color:#FFFFFF ">UniversidadedeCoimbra</span></h3>
-        <h3 class="sec" style="font-size:16px; color:#E62B1E; font-weight:bold">
-          TEDx<span style="color:#FFFFFF ">UniversidadedeCoimbra</span></h3>
-        <p>Coimbra, cidade dos estudantes, do Mondego e da cultura. Estudantes que fazem história. Mondego que se renova. Cultura que não dorme.</p>
-        <p>Coimbra respira, sente e luta. Tem dentro de si a mudança e os estudantes que a alimentam. Só estuda em Coimbra quem tem vontade de fazer mais, quem não se conforma com o estabelecido, quem luta e reivindica os seus direitos, quem nasce
-          com o inconformismo a correr nas veias.</p>
-        <p>É este o antídoto para a mudança, o motor para a denúncia das injustiças, o oxigénio para a vida dos estudantes.
+          TEDx<span style="color:#000000 ">UniversidadedeCoimbra</span></h3>
+        <p>Coimbra, cidade dos estudantes, do Mondego e da cultura. Estudantes que fazem história. Mondego que se renova. Cultura que não dorme.<br>Coimbra respira, sente e luta. Tem dentro de si a mudança e os estudantes que a alimentam. Só estuda em Coimbra quem tem vontade de fazer mais, quem não se conforma com o estabelecido, quem luta e reivindica os seus direitos, quem nasce
+          com o inconformismo a correr nas veias.<br>É este o antídoto para a mudança, o motor para a denúncia das injustiças, o oxigénio para a vida dos estudantes.
           Não é por pouco que nos diferenciamos há mais de 100 anos. Que somos conhecidos pela nossa luta e forma de questionar o inquestionável. Que esperam de nós o melhor da diferença. E é isso que entregamos.
           Aliamos os valores da clássica Universidade de Coimbra com as engrenagens das mudanças do seculo XXI, espelhadas num evento cheio de ideias que merecem ser partilhadas!
           Inconformismo é palavra de ordem e o tema do primeiro TEDxUniversidadedeCoimbra, de estudantes para ti.</p>
@@ -75,23 +71,23 @@
 
         <div class="new">
           <div class="news_text">
-            <p>As inscrições ainda não estão abertas. Fica atento!</p>
+            <p>No final do TEDxUniversidadedeCoimbra teremos a continuação do nosso evento no Liquidâmbar!</p>
           </div>
-          <img class="mySlides" src="img/new1.jpg" style="width:100%">
-        </div>
-
-        <div class="new">
-          <div class="news_text">
-            <p>O Teatro da Cerca de São Bernardo vai acolher todas as Talks e Performances!</p>
-          </div>
-          <img class="mySlides" src="img/new2.jpg" style="width:100%">
+          <img class="mySlides" src="img/news/new1.png" style="width:100%">
         </div>
 
         <div class="new">
           <div class="news_text">
             <p>Arlindo Oliveira é o mais recente orador a ser confirmado, não percas!</p>
           </div>
-          <img class="mySlides" src="img/new3.jpg" style="width:100%">
+          <img class="mySlides" src="img/news/new2.png" style="width:100%">
+        </div>
+
+        <div class="new">
+          <div class="news_text">
+            <p>O Teatro da Cerca de São Bernardo vai acolher todas as Talks e Performances!</p>
+          </div>
+          <img class="mySlides" src="img/news/new3.jpg" style="width:100%">
         </div>
       </div>
 
