--- a/orators.html
+++ b/orators.html
@@ -58,19 +58,69 @@
       <div class="orators-container">
 
         <div class="orator">
-          <a href="#">
+          <div class="orator-info" id="orator-info">
+            <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
+            <div class="info-container">
+              <h2>Clara Não</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+          <a class="orator-icon" id="orator-icon" onclick="orator()">
+            <img src='img/orators/Clara Não 2.jpg' onmouseover="this.src='img/orators/Clara Não 1.jpg';" onmouseout="this.src='img/orators/Clara Não 2.jpg';" />
+            <p class="orName">Clara Não</p>
+          </a>
+        </div>
+
+        <div class="orator">
+          <div class="orator-info" id="orator-info">
+            <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
+            <div class="info-container">
+              <h2>Arlindo Oliveira</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+          <a class="orator-icon" id="orator-icon" onclick="orator()">
+            <img src='img/orators/Arlindo Oliveira 2.jpg' onmouseover="this.src='img/orators/Arlindo Oliveira 1.jpg';" onmouseout="this.src='img/orators/Arlindo Oliveira 2.jpg';" />
+            <p class="orName">Arlindo Oliveira</p>
+          </a>
+        </div>
+
+
+        <div class="orator">
+          <div class="orator-info" id="orator-info">
+            <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
+            <div class="info-container">
+              <h2>Ana Costa</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+          <a class="orator-icon" id="orator-icon" onclick="orator()">
+            <img src='img/orators/Ana Costa 2.jpg' onmouseover="this.src='img/orators/Ana Costa 1.jpg';" onmouseout="this.src='img/orators/Ana Costa 2.jpg';" />
+            <p class="orName">Ana Costa</p>
+          </a>
+        </div>
+
+      </div>
+
+      <div class="orators-container">
+
+        <div class="orator">
+          <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
             <p class="orName">Nome Orador</p>
           </a>
         </div>
         <div class="orator">
-          <a href="#">
+          <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
             <p class="orName">Nome Orador</p>
           </a>
         </div>
         <div class="orator">
-          <a href="#">
+          <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
             <p class="orName">Nome Orador</p>
           </a>
@@ -81,42 +131,19 @@
       <div class="orators-container">
 
         <div class="orator">
-          <a href="#">
+          <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
             <p class="orName">Nome Orador</p>
           </a>
         </div>
         <div class="orator">
-          <a href="#">
+          <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
             <p class="orName">Nome Orador</p>
           </a>
         </div>
         <div class="orator">
-          <a href="#">
-            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orador</p>
-          </a>
-        </div>
-
-      </div>
-
-      <div class="orators-container">
-
-        <div class="orator">
-          <a href="#">
-            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orador</p>
-          </a>
-        </div>
-        <div class="orator">
-          <a href="#">
-            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orador</p>
-          </a>
-        </div>
-        <div class="orator">
-          <a href="#">
+          <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
             <p class="orName">Nome Orador</p>
           </a>
@@ -126,18 +153,14 @@
 
     </section>
 
-    <!-- <script type="text/javascript">
-      jQuery(document).ready(function($) {
-
-        $('.orPic').mouseleave(function() {
-          $('.orName').fadeOut();
-        });
-        $('.orPic').mouseenter(function() {
-          $('.orName').fadeIn();
-        });
-
-      });
-    </script> -->
+    <script type="text/javascript">
+      function orator() {
+        document.getElementById("orator-info").style.display = "block";
+      }
+      function orBack(){
+        document.getElementById("orator-info").style.display = "none";
+      }
+    </script>
 
 
   </main>
