--- a/orators.html
+++ b/orators.html
@@ -110,7 +110,7 @@
         <div class="orator">
           <a class="orator-icon">
             <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orador</p>
+            <p class="orName">Nome Orado</p>
           </a>
         </div>
         <div class="orator">
