Orators/Homepage/Partners uptated

--- a/index.html
+++ b/index.html
@@ -57,12 +57,19 @@
     <section id="about">
       <div class="text aos-init aos-animate" data-aos="fade-zoom-in">
         <h3 class="fir" style="font-size:28px; color:#E62B1E; font-weight:bold">
-          TEDx<span style="color:#000000 ">UniversidadedeCoimbra</span></h3>
-        <p>Coimbra, cidade dos estudantes, do Mondego e da cultura. Estudantes que fazem história. Mondego que se renova. Cultura que não dorme.<br>Coimbra respira, sente e luta. Tem dentro de si a mudança e os estudantes que a alimentam. Só estuda em Coimbra quem tem vontade de fazer mais, quem não se conforma com o estabelecido, quem luta e reivindica os seus direitos, quem nasce
-          com o inconformismo a correr nas veias.<br>É este o antídoto para a mudança, o motor para a denúncia das injustiças, o oxigénio para a vida dos estudantes.
-          Não é por pouco que nos diferenciamos há mais de 100 anos. Que somos conhecidos pela nossa luta e forma de questionar o inquestionável. Que esperam de nós o melhor da diferença. E é isso que entregamos.
-          Aliamos os valores da clássica Universidade de Coimbra com as engrenagens das mudanças do seculo XXI, espelhadas num evento cheio de ideias que merecem ser partilhadas!
-          Inconformismo é palavra de ordem e o tema do primeiro TEDxUniversidadedeCoimbra, de estudantes para ti.</p>
+          TEDx<span style="color:#ffffff ">UniversidadedeCoimbra</span></h3>
+        <p>Um mundo acelerado, cheio de vida, de nova informação, de novos horizontes. Um mundo rico em transformação.<br><br>
+
+          Um grupo de estudantes da Universidade de Coimbra propõe-se a levar a cabo uma missão: A de despertar a população jovem para as grandes mudanças a acontecer na nossa realidade. De onde viemos e para onde caminhamos são as questões que
+          queremos explorar, inflamando na comunidade jovem um sentido de responsabilidade, de compromisso e de ambição para com o mundo que nos rodeia.<br><br>
+
+          Acreditamos ser a máxima responsabilidade de qualquer indivíduo desenvolver a sua própria visão sobre o mundo e, perante a mesma, procurar denunciar as injustiças, fomentar a aceitação e a igualdade, respeitar todos os seres, questionar a
+          informação não questionada e activamente contribuir para uma sociedade desenvolvida, justa e unida.<br><br>
+
+          Este evento é criado no seio de uma cidade conhecida pela sua forte história, pelas suas gentes corajosas, inconformadas, que lutaram pelos ideiais que aqui destacamos. Coimbra respira conhecimento e aprendizagem, uma comunidade jovem,
+          moderna e visionária, na vanguarda de grandes desenvolvimentos sociais e científicos. Embalados nesta história, carregamos o sonho de tornar a massa passiva em agentes de mudança, informados, alertados, educados e moduladores.<br><br>
+
+          Trazemos uma visão de um mundo com uma brilhante passado e um promissor futuro. Um mundo em Metamorfose. </p>
       </div>
     </section>
 
@@ -78,7 +85,7 @@
 
         <div class="new">
           <div class="news_text">
-            <p>Arlindo Oliveira é o mais recente orador a ser confirmado, não percas!</p>
+              <p>Zé Mágico é o mais recente orador a ser confirmado, não percas!</p>
           </div>
           <img class="mySlides" src="img/news/new2.png" style="width:100%">
         </div>
