--- a/orators.html
+++ b/orators.html
@@ -62,8 +62,18 @@
             <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
             <div class="info-container">
               <h2>Clara Não</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Clara Não nasceu e vive no Porto. Licenciou-se em Design de
+                Comunicação pela Faculdade de Belas Artes no Porto e foi devido à sua
+                experiência de erasmus em Roterdão que direcionou o seu caminho pela
+                ilustração e pela escrita. Há 2 anos voltou à Faculdade de Belas Artes onde
+                tirou o seu mestrado em desenho e técnicas de impressão.
+                Clara Não destaca-se pela sua ironia e irreverência, nas ilustrações
+                onde reivindica a igualdade, trata de tabus sociais e desenvolve a escrita
+                ambidestra.
+                Está representada em diversas galerias, como a Senhora Presidenta,
+                Circus Network, Ó! Galeria, Malapata, Apaixonarte e Área 55. É mencionada
+                de forma regular em diversas publicações, como a Vogue, Público e Jornal
+                de Notícias, e tem uma forte presença diariamente no Instagram.</p>
             </div>
           </div>
           <a class="orator-icon" id="orator-icon" onclick="orator()">
@@ -77,13 +87,84 @@
             <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
             <div class="info-container">
               <h2>Arlindo Oliveira</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Arlindo Oliveira é um reconhecido investigador, académico e escritor
+                português, na área das ciências de computação. Professor do departamento
+                de Engenharia Eletrotécnica e de Computadores do IST (Lisboa), os seus
+                principais interesses são: Algoritmos e Complexidade, Bioinformática e
+                Design de Circuitos Digitais. O seu livro mais recente é Inteligência Artificial
+                publico pela Fundação Francisco Manuel dos Santos. Doutorado na
+                Universidade de Califórnia, Berkeley, é membro da Academia Portuguesa de
+                Engenharia e membro sénior da IEEE.</p>
             </div>
           </div>
           <a class="orator-icon" id="orator-icon" onclick="orator()">
             <img src='img/orators/Arlindo Oliveira 2.jpg' onmouseover="this.src='img/orators/Arlindo Oliveira 1.jpg';" onmouseout="this.src='img/orators/Arlindo Oliveira 2.jpg';" />
             <p class="orName">Arlindo Oliveira</p>
+          </a>
+        </div>
+
+
+        <div class="orator">
+          <div class="orator-info" id="orator-info">
+            <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
+            <div class="info-container">
+              <h2>Ana Filipa Costa</h2>
+              <p>Ana Costa é uma das impulsionadoras da sustentabilidade na indústria
+                da moda. Formada em Engenharia do Ambiente pela Faculdade Nova de
+                Lisboa, e em Gestão pelo ISCTE - Instituto Universitário de Lisboa.
+                Em 2017, aliou então a sua experiência profissional à sua paixão e
+                fundou a Baseville. Esta sua marca tem como princípio a criação de peças
+                que sejam ambiental e socialmente responsáveis.
+                Recentemente, aliou-se à plataforma Catalyst | Inspiring Future Fashion
+                que visa maximizar o reconhecimento da sustentabilidade nesta indústria.</p>
+            </div>
+          </div>
+          <a class="orator-icon" id="orator-icon" onclick="orator()">
+            <img src='img/orators/Ana Costa 2.jpg' onmouseover="this.src='img/orators/Ana Costa 1.jpg';" onmouseout="this.src='img/orators/Ana Costa 2.jpg';" />
+            <p class="orName">Ana Filipa Costa</p>
+          </a>
+        </div>
+
+      </div>
+
+
+
+
+
+      <div class="orators-container">
+
+        <div class="orator">
+          <div class="orator-info" id="orator-info">
+            <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
+            <div class="info-container">
+              <h2>Carolina Salgueiro Pereira</h2>
+              <p>Com apenas 19 anos Carolina Salgueiro Pereira, além de estudante
+                de educação física é também fundadora do My Destiny, um projeto
+                internacional de voluntariado através do surf. É ainda criadora da marca
+                criadoras da marca Frozen, que inclui uma linha de roupa, um canal online e
+                pranchas de surf.
+                Carolina faz também parte da HeForShe Portugal e é voluntária na
+                organização SOS Salvem o Surf.</p>
+            </div>
+          </div>
+          <a class="orator-icon" id="orator-icon" onclick="orator()">
+            <img src='img/orators/Carolina Salgueiro Pereira 2.jpg' onmouseover="this.src='img/orators/Carolina Salgueiro Pereira.jpg';" onmouseout="this.src='img/orators/Carolina Salgueiro Pereira 2.jpg';" />
+            <p class="orName">Carolina Salgueiro Pereira</p>
+          </a>
+        </div>
+
+        <div class="orator">
+          <div class="orator-info" id="orator-info">
+            <div class="info-bckg" id="info-bckg" onclick="orBack()"></div>
+            <div class="info-container">
+              <h2>Zé Mágico</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+          <a class="orator-icon" id="orator-icon" onclick="orator()">
+            <img src='img/orators/ZeMagico2.jpg' onmouseover="this.src='img/orators/ZeMagico.jpg';" onmouseout="this.src='img/orators/ZeMagico2.jpg';" />
+            <p class="orName">Zé Mágico</p>
           </a>
         </div>
 
@@ -104,27 +185,6 @@
         </div>
 
       </div>
-
-      <div class="orators-container">
-
-        <div class="orator">
-          <a class="orator-icon">
-            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orado</p>
-          </a>
-        </div>
-        <div class="orator">
-          <a class="orator-icon">
-            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orador</p>
-          </a>
-        </div>
-        <div class="orator">
-          <a class="orator-icon">
-            <img src='img/orators/carolinadist.png' onmouseover="this.src='img/orators/carolina.png';" onmouseout="this.src='img/orators/carolinadist.png';" />
-            <p class="orName">Nome Orador</p>
-          </a>
-        </div>
 
       </div>
 
@@ -157,7 +217,8 @@
       function orator() {
         document.getElementById("orator-info").style.display = "block";
       }
-      function orBack(){
+
+      function orBack() {
         document.getElementById("orator-info").style.display = "none";
       }
     </script>
