--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
       </div>
     </section>
 
+    <section id="social">
+      <div class="social-container">
+        <div class="social-net">
+          <a target="_blank" href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.svg" alt=""></a>
+          <p>+1200 Seguidores</p>
+        </div>
+        <div class="social-net">
+           <a target="_blank" href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.svg" alt=""></a>
+          <p>+3000 Seguidores</p>
+        </div>
+        <div class="social-net">
+          <a target="_blank" href="https://www.youtube.com/channel/UC8AW43t_gg9AVOGKgOxTneg"><img src="img/yt.svg" alt=""></a>
+          <p>+8000 Seguidores</p>
+        </div>
+      </div>
+    </section>
+
+
     <section id="news">
       <div class="container_news">
 
